fix unintentional scrollbar appearance
- the page now uses % instead of vw to calculate width, which prevents horizontal overflow
- dropdowns now use overflow: auto instead of overflow: scroll

--- a/garfiedl/src/css/index.css
+++ b/garfiedl/src/css/index.css
@@ -70,9 +70,13 @@ a {
   text-decoration: underline;
 }
 
+#root {
+  width: 100%;
+}
+
 #page-container {
   display: flex;
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
   flex-direction: column;
 }
